test create title image

--- a/common/pdf-template.tex
+++ b/common/pdf-template.tex
@@ -127,7 +127,7 @@
 
   \vspace*{\fill}
     \begin{center}
-      % \\includegraphics[width=0.7\\textwidth]{title}
+      \includegraphics[width=0.7\textwidth]{title}
     \end{center}
   \vspace*{\fill}
 
