playing with booklet

--- a/common/pdf-template.tex
+++ b/common/pdf-template.tex
@@ -1,6 +1,13 @@
 \documentclass{book}
-\usepackage[a6paper]{geometry}
+\usepackage[a5paper]{geometry}
 
+
+% \\geometry{
+%   left=4mm,
+%   right=4mm,
+%   bottom=13mm,
+%   top=4mm
+% }
 
 % Fonts and typography
 
