--- a/common/pdf-template.tex
+++ b/common/pdf-template.tex
@@ -1,13 +1,5 @@
-\documentclass{book}
+\documentclass[14pt]{book}
 \usepackage[a5paper]{geometry}
-
-
-% \\geometry{
-%   left=4mm,
-%   right=4mm,
-%   bottom=13mm,
-%   top=4mm
-% }
 
 % Fonts and typography
 
